Completed Final Version

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,8 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+monitor_speed = 9600
+
+; 🟢 เพิ่มบรรทัดนี้เพื่อติดตั้ง Library RFID
+lib_deps = miguelbalboa/MFRC522 @ ^1.4.11
 ; lib_deps = BluetoothSerial
